updated the css to remove the gears logo to fix the banner pushing down on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ pre {
 }
 
 .add-100 {
-  margin-top: 180px;
+  margin-top: 125px;
 }
 
 /* Limits the width of smaller numeric inputs */
